# sensors

./: README.md  sensormodule.bash  sensors.py  sensortest0
pico/: CMakeLists.txt  README.md  sensorpicoDHT22.c
